2006-03-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Scanpackages.pm: Use CLI::capture to shut up Fink::Package.

2006-03-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* CLI.pm: Adjust prototype for &capture.

2006-03-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* CLI.pm: New function &capture, to hijack STDOUT and STDERR.

2006-03-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* FinkVersion.pm.in: Collapse copy/pasted code into a loop.

2006-03-21  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Catch another .pc syntax that triggers a bug.

2006-03-20  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Services.pm: Try to fix errno_h breakage on 10.3.

2006-03-20  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Remove stray 'use DB_File'.
	* Scanpackages.pm: Ensure we load the correct DB_File.

2006-03-19  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Services.pm: Make store_rename create world-readable files.

2006-03-19  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm, Package.pm, PkgVersion.pm, Services.pm: Remove redundant
	locking.

2006-03-19  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: We don't need the 'override' code anymore, yay!
	* Package.pm, PkgVersion.pm, Services.pm: Fail gracefully if locking is
	not supported.

2006-03-18  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Scanpackages.pm: Let's NOT delete files for no good reason.

2006-03-18  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Scanpackages.pm: Better error handling.

2006-03-18  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Scanpackages.pm: Write Packages.gz to a temp file and then move
	atomically.

2006-03-18  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Scanpackages.pm: Run the dpkg-deb in the current prefix.

2006-03-18  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Scanpackages.pm: Maybe I should brush up on my perl one of these days...
